--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -2,7 +2,7 @@ name: Weekly Report
 
 on:
   schedule:
-    - cron: "15 23 * * 1"   # Δευτέρα 23:00 UTC = Τρίτη 02:00 Ελλάδας
+    - cron: "34 0 * * 2"   # Τρίτη 03:34 Ελλάδας (00:34 UTC)
   workflow_dispatch:
 
 jobs:
