--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -2,7 +2,7 @@ name: Weekly Report
 
 on:
   schedule:
-    - cron: "7 1 * * 2"   # Τρίτη 04:07 ώρα Ελλάδας (01:07 UTC)
+    - cron: "17 1 * * 2"   # Κάθε Τρίτη 01:17 UTC = 04:17 Ελλάδας
   workflow_dispatch:
 
 jobs:
