--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -2,7 +2,7 @@ name: Weekly Report
 
 on:
   schedule:
-    - cron: "29 1 * * 2"   # Κάθε Τρίτη 01:17 UTC = 04:17 Ελλάδας
+    - cron: "0 10 * * 6"   # Κάθε Σάββατο 10:00 UTC = 13:00 Ελλάδας
   workflow_dispatch:
 
 jobs:
