--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           pip install -r requirements.txt
       - name: Run script
-        env:               # 👉 εδώ περνάμε τα secrets
+        env:              
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
         run: |
